[workspace]
resolver = "2"
members = [
    "crates/mic2_rs",
    "crates/pymic2",
    "crates/libmic2",
]
exclude = [
    "examples/rust/find",
]

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "echo YES I AM WORKIND",
    "./ci/setup-debian.sh",
]

[workspace.metadata.cross.target.armv7-unknown-linux-gnu]
pre-build = [
    "echo YES I AM WORKIND",
    "./ci/setup-debian.sh",
]
