[package]
name = "mic2"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/intrepidcs/mic2"
authors = ["David Rebbe <drebbe@intrepidcs.com>"]
readme = "../../readme.md"
description = "Rust API for neoVI MIC2"
keywords = ["neoVI", "MIC2", "Intrepid", "ICS", "Intrepid Control System"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["gps", "io", "audio"]
gps = ["dep:nmea-parser", "dep:serialport"]
io = ["dep:libftdi1-sys"]
audio = ["dep:sfml"]

[dependencies]
#libftd2xx = { version = "0.32.2", features=[], optional = true }
cfg-if = "1.0.0"
sfml = { version = "0.21.0", optional = true }
nmea-parser = { version = "0.10.0", optional = true }
serialport = { version = "4.2.1", optional = true }
rusb = "0.9.2"
libftdi1-sys = { version = "1.1.2", optional = true }
bitflags = "2.3.3"
regex = "1.9.1"
chrono = "0.4.26"
enumflags2 = "0.7.8"
serde = { version = "1.0.193", features = ["derive"] }
nom = "7.1.3"

