[package]
name = "mic2"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/intrepidcs/mic2"
authors = ["David Rebbe <drebbe@intrepidcs.com>"]
readme = "README.md"
description = "Rust API for neoVI MIC2"
keywords = ["neoVI", "MIC2", "Intrepid", "ICS"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["gps", "io", "audio"]
gps = ["dep:nmea-parser", "dep:serialport"]
io = ["dep:libftdi1-sys"]
audio = ["dep:sfml"]

# Disable hardware-in-loop tests
_skip-hil-testing = []

[dependencies]
#libftd2xx = { version = "0.32.2", features=[], optional = true }
cfg-if = "1.0.0"
nmea-parser = { version = "0.10.0", optional = true }
serialport = { version = "4.3.0", optional = true }
rusb = "0.9.4"
libftdi1-sys = { version = "1.1.3", optional = true }
bitflags = "2.5.0"
regex = "1.10.4"
chrono = "0.4.38"
enumflags2 = "0.7.9"
serde = { version = "1.0.203", features = ["derive"] }
nom = "7.1.3"

[target.'cfg(target_os = "linux")'.dependencies]
# Use an older version for compatibility with stable Debian (SFML 2.5)
sfml = { version = "0.20.0", optional = true }

[target.'cfg(not(target_os = "linux"))'.dependencies]
# Use a newer version for non-linux bugfixes. Requires SFML 2.6
sfml = { version = "0.21.0", optional = true }

