[package]
name = "neovi_mic_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["gps", "io", "audio"]
gps = ["dep:nmea-parser", "dep:serialport"]
io = ["dep:libftdi1-sys"]
audio = ["dep:sfml"]

[dependencies]
#libftd2xx = { version = "0.32.2", features=[], optional = true }
sfml = { version = "0.21.0", optional = true }
nmea-parser = { version = "0.10.0", optional = true }
serialport = { version = "4.2.1", optional = true }
rusb = "0.9.2"
libftdi1-sys = { version = "1.1.2", optional = true }
bitflags = "2.3.3"
regex = "1.9.1"
chrono = "0.4.26"

