[package]
name = "mic2_python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pymic2"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.38"
pyo3 = { version = "0.21.2", features = ["chrono", "extension-module"] }

[dependencies.mic2]
path = "../mic2_rs"
