[package]
name = "neovi_mic_python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "neovi_mic"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"

[dependencies.neovi_mic_rs]
path = "../neovi_mic_rs"